fix: 1. user always sees 'No comments' on post page 2. time label when comment was posted is shown too close to other text elements 3. when user clicks on number of comments on index page he is not redirected exactly to comments section

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,10 @@ main .comment_body {
   margin-bottom: 1em;
 }
 
+main .comment_body time {
+  margin: 0 1em 0 1em;
+}
+
 main .reply_comments {
   margin-left: 1.3em;
 }
